# okgraphics

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
docs/: HARDWARE.md  LICENSES.md
docs/rd/test/: cli-test-report-2026-03-03.md
scripts/: cli.py  download_models.py
src/: __init__.py  __main__.py  logging_config.py
src/api/: server.py
src/api/static/: app.js  index.html  style.css
src/cli/: __init__.py  runtime.py  types.py
src/commands/: __init__.py  generate.py  model.py  server.py
src/handlers/: __init__.py  generate.py  model.py  server.py
src/pipelines/: __init__.py  vector.py
src/utils/: __init__.py  image.py
tests/: __init__.py  conftest.py  test_cli.py
